src/test/resources/annotator/ReservedFieldName.proto
syntax = "proto3";

package annotator;

message TestMessage {
    int32 <error descr="Reserved field name: field">field</error> = 1;

    reserved "field";
}